welcome.lessons.welcome.array.search.MaxValue.scala.error
averageValue:2: error: not found: value somme
  somme = 0
  ^averageValue:3: error: Int does not take parameters
  for (i <- 0 to nums.length()-1){
                            ^averageValue:4: error: not found: value somme
    somme = somme + nums(i)
    ^averageValue:6: error: not found: value somme
  return somme/nums.length()
         ^averageValue:6: error: Int does not take parameters
  return somme/nums.length()
                          ^