welcome.lessons.welcome.array.search.MaxValue.scala.code
def maxValue(nums:Array[Int]): Int = {
  var max = nums(0)
  for (i <- 0 to nums.length() - 1){
    if (nums(i)>max){
      max = nums(i)
    }
  }
  return max
}